tests/parser/fail/self-param-bin.som
"test:
failMessage:
  - contains: define
  - contains: self
"

SelfParamBin = (
  / self = ('rip')
)
